Add synology sensor

--- a/extras/fake_secrets.yaml
+++ b/extras/fake_secrets.yaml
@@ -23,3 +23,6 @@ spotify_client_secret: spotify_client_secret
 
 mqtt_username: mqtt_username
 mqtt_password: mqtt_password
+
+nas_username: nas_username
+nas_password: nas_password
