--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -123,3 +123,46 @@ views:
           - sensor.since_last_boot
           - sensor.processor_use
           - sensor.memory_free
+          
+          
+      - type: vertical-stack
+        cards:
+          - type: glance
+            title: NAS Status
+            entities:
+              - entity: sensor.status_smart_sda
+                name: Disk1
+                icon: mdi:medical-bag
+              - entity: sensor.temperature_sda
+                name: Disk1
+                icon: mdi:thermometer-lines
+              - entity: sensor.status_smart_sdb
+                name: Disk2
+                icon: mdi:medical-bag
+              - entity: sensor.temperature_sdb
+                name: Disk2
+              - entity: sensor.volume_used_volume_1
+                name: Used
+                icon: mdi:harddisk
+              - entity: sensor.total_size_volume_1
+                name: Total Size
+                icon: mdi:harddisk
+            columns: 6
+          - type: horizontal-stack
+            cards:
+              - type: sensor
+                entity: sensor.cpu_load_total
+                name: Processor
+                line_color: '#03a9f4'
+                line_width: 8
+                accuracy: 30
+                hours_to_show: 24
+                height: 120
+              - type: sensor
+                entity: sensor.memory_usage_real
+                name: Memory
+                line_color: '#03a9f4'
+                line_width: 8
+                accuracy: 30
+                hours_to_show: 24
+                height: 120
