--- a/extras/fake_secrets.yaml
+++ b/extras/fake_secrets.yaml
@@ -9,9 +9,9 @@ calendar_id: calendar_id
 calendar_secret: calendar_secret
 
 telegram_api_key: telegram_api_key
-telegram_david_id: telegram_david_id
+telegram_david_id: 123456
 
-xiaomi_gateway_key: xiaomi_gateway_key
+xiaomi_gateway_key: 1234567890ABCDEF
 
 netatmo_api_key: netatmo_api_key
 netatmo_secret_key: netatmo_secret_key
