--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 !*.md
 !.travis.yml
 !.HA_VERSION
+!**.py
 
 # Folders whitelist, these will not be ignored
 !extras
@@ -15,6 +16,7 @@
 !cover
 !light
 !sensor
+!custom_components
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
