--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -74,6 +74,7 @@ views:
         entities:
           - climate.salle_a_manger
           - script.livingroom_light
+
   - title: Camera
     cards:
       - type: picture-glance
@@ -82,6 +83,7 @@ views:
           - cover.garage_car_door
           - light.garage
         camera_image: camera.garage
+
   - title: Kitchen
     cards:
       - type: entities
@@ -91,6 +93,7 @@ views:
           - sensor.temperature_kitchen
           - sensor.humidity_kitchen
           - sensor.pressure_kitchen
+
   - title: Living Room
     cards:
       - type: entities
@@ -102,6 +105,7 @@ views:
           - sensor.pressure_living_room
       - type: media-control
         entity: media_player.spotify
+
   - title: Bathroom
     cards:
       - type: entities
@@ -111,6 +115,7 @@ views:
           - sensor.temperature_bathroom
           - sensor.humidity_bathroom
           - sensor.pressure_bathroom
+
   - title: Other
     cards:
       - type: entities
@@ -123,7 +128,16 @@ views:
           - sensor.since_last_boot
           - sensor.processor_use
           - sensor.memory_free
-          
+      - type: entities
+        title: Batteries
+        entities:
+          - sensor.front_door_sensor_battery_level
+          - sensor.back_door_sensor_battery_level
+          - sensor.temperature_living_room_battery_level
+          - sensor.temperature_kitchen_battery_level
+          - sensor.temperature_bathroom_battery_level
+          - sensor.smoke_sensor_living_room_battery_level
+          - sensor.smoke_sensor_upstairs_battery_level
           
       - type: vertical-stack
         cards:
