--- a/customize.yaml
+++ b/customize.yaml
@@ -47,6 +47,10 @@ sensor.humidity_bathroom:
   icon: mdi:water-percent
 sensor.pressure_bathroom:
   friendly_name: Bathroom pressure
+binary_sensor.switch_fan_bathroom:
+  friendly_name: Bathroom fan switch
+switch.plug_fan_bathroom:
+  friendly_name: Bathroom fan plug
 
 # Kitchen
 sensor.temperature_kitchen:
