--- a/automation/doorbell.yaml
+++ b/automation/doorbell.yaml
@@ -3,7 +3,7 @@
 - alias: Launch doorbell on button press
   trigger:
     platform: event
-    event_type: click
+    event_type: xiaomi_aqara.click
     event_data:
       entity_id: binary_sensor.doorbell_switch
       click_type: single
