--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,15 @@ http:
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
   # base_url: example.duckdns.org:8123
 
+# System Health
+# https://www.home-assistant.io/components/system_health/
+system_health:
+
+# Force usage of my ui-lovelace configuration
+# https://www.home-assistant.io/lovelace/yaml-mode/
+lovelace:
+  mode: yaml
+  
 # Checks for available updates
 # # https://www.home-assistant.io/components/updater/
 updater:
@@ -67,6 +76,7 @@ sun:
 group: !include groups.yaml
 automation: !include_dir_merge_list automation/
 script: !include_dir_merge_named script/
+binary_sensor: !include_dir_merge_list binary_sensor/
 sensor: !include_dir_merge_list sensor/
 light: !include_dir_merge_list light/
 cover: !include_dir_merge_list cover/
@@ -102,6 +112,11 @@ homekit:
         exclude_entities:
           - light.living_room
           - light.bedroom
+
+# Apple TV
+# https://www.home-assistant.io/components/apple_tv/
+apple_tv:
+  start_off: true
 
 # Xiaomi
 # https://www.home-assistant.io/components/xiaomi_aqara/
